--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ p{
     align-items: center;
     margin:10px;
     font-weight: 500;
+    opacity: 0;
+}
+
+.fade{
+    opacity: 1;
+    transition: opacity 1.7s;
 }
 
 button{
